2025-08-29T01:57:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17312529810 # 1494
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-08-29
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3715 / 0 3716 / +0 +1

2025-08-28T12:52:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17296398377 # 1493
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-08-28
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3714 / 0 3715 / +0 +1

2025-08-26T12:55:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17238807983 # 1489
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-08-26
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3713 / 0 3714 / +0 +1

2025-08-25T02:05:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17197123535 # 1486
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-08-25
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3712 / 0 3713 / +0 +1

2025-08-24T02:12:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17182864843 # 1484
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-08-24
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3711 / 0 3712 / +0 +1

2025-08-23T12:48:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17175640353 # 1483