@@ -1,3 +1,9 @@
+2025-08-29T12:51:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17324282528 # 1495
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-08-29
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3716 / 0 3718 / +0 +2
+
 2025-08-29T01:57:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17312529810 # 1494
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-08-29
